Clean up warnings

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -34,11 +34,11 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">DASHBOARD</a>
+            <a class="navbar-brand" href="dashboard.html">DASHBOARD</a>
         </div>
         <ul class="nav navbar-nav">
             <li class="active"><a href="#">ACCOUNT</a></li>
-            <li><a href="#">ACTIVITY</a></li>
+            <li><a href="#">SALES</a></li>
             <li><a href="#">CUSTOMERS</a></li>
             <li><a href="#">PRODUCTS</a></li>
         </ul>
